--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<ul>
 	
 		<li>
-		<label for="name">Name</label>
+		<label for="name">Name</label></br>
 		<input type="text" id="name" name="name" maxlength="140">
 		</li>
 		<li>
-		<label for="interests">Interests</label>
+		<label for="interests">Interests</label></br>
 		<textarea id="interests" name="interests" rows="5" cols="33">This is the default text holding space for your interests. List your interests here!</textarea>
 		</li>
 		<li class="button">
